--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-picker-select": "^8.0.4",
     "react-native-web": "~0.13.12",
-    "react-query": "^3.4.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
@@ -27,6 +26,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-native": "^0.63.42",
+    "@types/react-redux": "^7.1.12",
+    "@types/redux": "^3.6.0",
     "typescript": "^4.1.3"
   },
   "private": true
